<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_COM_Buffers" Id="{a8441f26-f9f8-4fbc-842d-41b6657e3ba7}">
    <Declaration><![CDATA[VAR_GLOBAL
	// XRTM1
	Serial_RXBuffer_XRTM1 : ComBuffer;
	Serial_TXBuffer_XRTM1 : ComBuffer;
	
	// M2
	Serial_P2_SerialRXBuffer : ComBuffer;
	Serial_P2_SerialTXBuffer : ComBuffer;
	
	// M3
	Serial_P3_SerialRXBuffer : ComBuffer;
	Serial_P3_SerialTXBuffer : ComBuffer;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>